# prolific

./: .gitignore  Launch-Prolific-Git-Active.bat  README.md  launch-ui.sh  pyproject.toml
prolific_agent/: activity.py  cli.py  config.py  diff.py  estimate.py  git_ops.py  privacy.py  repo_bootstrap.py  report.py  run_cycle.py  scanner.py  state.py  ui.py  viz.py
scripts/: README.md  install_linux.sh  install_windows.ps1  reanonymize_history.py  run_scheduled.ps1  uninstall_linux.sh  uninstall_windows.ps1
tests/: test_diff.py  test_report_payload_privacy.py  test_scanner_privacy.py
